fixed note overflow bug

--- a/styles/main.less
+++ b/styles/main.less
@@ -90,7 +90,6 @@ main {
             .content {
                 background-color: transparent;
                 border-style: none;
-                pointer-events: none;
             }
         }
         
